# thirlwallca

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_person_extended_properties.py  b2c3d4e5f6a7_add_unique_linked_person_id.py  c3d4e5f6a7b8_add_marriage_place_gedcom_xref_birth_notes.py  d4e5f6a7b8c9_add_signup_requests_onboard_tokens.py  e5f6a7b8c9d0_add_memories_photo_tags_traditions.py  ee2558490c6f_initial_schema.py  f6a7b8c9d0e1_add_audit_logs.py  g7b8c9d0e1f2_add_signup_codes.py  h8c9d0e1f2g3_add_error_logs.py  i9d0e1f2g3h4_add_heritage_features.py  j0e1f2g3h4i5_add_family_stories.py  k1f2g3h4i5j6_add_family_events.py  l2g3h4i5j6k7_add_preferred_name.py
backend/app/: config.py  deps.py  main.py
backend/app/auth/: cognito.py  rbac.py
backend/app/domain/: enums.py  models.py
backend/app/http/handlers/: admin.py  auth.py  calendar_events.py  challenges.py  comments.py  dashboard.py  events.py  family_stats.py  family_stories.py  health.py  (+23 more)
backend/app/middleware/: cors.py  error_capture.py
backend/app/services/: audit_service.py  email_service.py  gedcom_service.py  geocoding.py  import_service.py  location_service.py  name_service.py  orbit_service.py  relationship_service.py
backend/scripts/: check_relationships.py  create_castle_stories.py  create_connop_stories.py  debug_import.py  find_duplicates.py  import_gedcom.py  import_thirlwall_pics.py  merge_persons.py  seed_data.py
backend/tests/: conftest.py  test_orbit_endpoint.py
(+187 files in other folders)
